--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "json-server db.json -m ./node_modules/json-server-auth --port 5001",
-    "dev": "concurrently \"vite\"  ",
+    "dev": "concurrently \"vite\" \"npm run start\"",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --ext ts,tsx src/",
