--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@hookform/resolvers": "^3.0.0",
+    "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
     "concurrently": "^8.0.1",
     "flowbite": "^1.6.4",
